2007-11-22  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.in: Added 'oc' to ALL_LINGUAS.

2007-09-16  Matthias Clasen  <mclasen@redhat.com>

	* MAINTAINERS: Add this file to allow commits again.

2007-07-24  Matthias Clasen  <mclasen@redhat.com>

	* file-share-properties.glade: Don't hardcode the invisible
	character.  (#422047)

2007-07-13  Matthias Clasen  <mclasen@redhat.com>

	* file-share-properties.c: Disable the password entry if
	the password setting is "never".  (#456390)

2007-07-10  Owen Taylor  <otaylor@redhat.com>

	* configure.ac: Check for DBUS 1.1
	* user_share.c: When we have DBUS 1.1 export an additional TXT record via
	Avahi that the GUID of the user's D-BUS session to allow associating the
	export with other information exported about the user. (#455307)

2007-06-14  Alexander Larsson  <alexl@redhat.com>

	* user_share.c (lookup_public_dir):
	Don't export all of home if PUBLICSHARE points to that (i.e. if disabled)

2007-03-06  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-user-share 0.11 ===
	
2007-03-06  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2007-03-06  Alexander Larsson  <alexl@redhat.com>

        * dav_user_2.0.conf:
        * dav_user_2.2.conf:
        * user_share.c:
	Use PUBLICSHARE from xdg-user-dirs as default.
	Fall back to ~/Public otherwise.

2007-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gnome-user-share-properties.desktop.in: Remove
	invalid Applications category, add X-GNOME-NetworkSettings.

2006-12-15  Pema Geyleg  <pgeyleg@gmail.com>

	* cofigure.in: Added 'dz' to ALL_LINGUAS

2006-12-12  Ankit Patel  <ankit644@yahoo.com>

	* configure.in: Added 'gu' in ALL_LINGUAS

2006-12-08  Alexander Larsson  <alexl@redhat.com>

	* file-share-properties.c: (main):
	Add textdomain boiler plate (#383092)
