@@ -1,0 +1,10 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=User Sharing
+Comment=Launch User Sharing if enabled
+Icon=apacheconf
+Exec=@installdir@/gnome-user-share
+Terminal=false
+Type=Application
+Categories=
+OnlyShowIn=GNOME;
